# job-logger

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  WEB_CHANGELOG.md  alembic.ini  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
docker/nginx/: Dockerfile
docs/agent-skills/: autotask.md  security.md  workflow.md
job_logger/: __init__.py  config.py  database.py  enums.py  logging_config.py  main.py  models.py  security.py  session_timeout.py  time_utils.py  ui.py  version.py
job_logger/routes/: __init__.py  auth.py  changelog.py  configuration.py  debug.py  health.py  mobile.py  passkeys.py  pwa.py  review.py  users.py
job_logger/services/: __init__.py  ai_cleanup.py  audit.py  autotask.py  backups.py  changelog.py  cloudflare_blocks.py  jobs.py  login_failures.py  login_protection.py  passkeys.py  preferences.py  session_control.py  system_health.py  transcription.py  users.py
job_logger/static/: app.css  config.js  date-time-controls.js  desktop.css  manifest.webmanifest  mobile.js  (+7 more)
migrations/: env.py  script.py.mako
scripts/: diagnose_tunnel.sh  discover_autotask_ids.py
tests/: __init__.py  conftest.py  test_ai_cleanup.py  test_autotask_cache.py  test_changelog.py  test_config.py  test_debug.py  test_docker_compose.py  test_logging_config.py  test_migrations.py  test_mobile_javascript.py  test_nginx_config.py  test_passkeys.py  test_public_surface.py  test_pwa.py  test_pwa_javascript.py  test_review_javascript.py  test_time_utils.py  test_transcription_config.py  test_users.py  test_workflow.py
(+42 files in other folders)
